; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revparse.c_maybe_sha_or_abbrev.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revparse.c_maybe_sha_or_abbrev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@GIT_OBJECT_ANY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i8*, i64)* @maybe_sha_or_abbrev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @maybe_sha_or_abbrev(i32** %0, i32* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32** %0, i32*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = load i64, i64* %9, align 8
  %13 = call i64 @git_oid_fromstrn(i32* %10, i8* %11, i64 %12)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = load i32, i32* @GIT_ENOTFOUND, align 4
  store i32 %16, i32* %5, align 4
  br label %23

17:                                               ; preds = %4
  %18 = load i32**, i32*** %6, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = load i64, i64* %9, align 8
  %21 = load i32, i32* @GIT_OBJECT_ANY, align 4
  %22 = call i32 @git_object_lookup_prefix(i32** %18, i32* %19, i32* %10, i64 %20, i32 %21)
  store i32 %22, i32* %5, align 4
  br label %23

23:                                               ; preds = %17, %15
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i64 @git_oid_fromstrn(i32*, i8*, i64) #1

declare dso_local i32 @git_object_lookup_prefix(i32**, i32*, i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
